@@ -1,9 +1,11 @@
 package com.ccbsa.wms.picking.application.service.command.dto;
 
+import java.util.Collections;
 import java.util.List;
 
 import com.ccbsa.common.domain.valueobject.TenantId;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import lombok.Builder;
 import lombok.Getter;
 
@@ -14,8 +16,10 @@ import lombok.Getter;
  */
 @Getter
 @Builder
+@SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "Defensive copies are created in constructor and getter returns defensive copy")
 public final class CreatePickingListCommand {
     private final TenantId tenantId;
+    @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "Defensive copies are created in constructor")
     private final List<LoadCommand> loads;
     private final String notes;
 
@@ -27,8 +31,18 @@ public final class CreatePickingListCommand {
             throw new IllegalArgumentException("At least one load is required");
         }
         this.tenantId = tenantId;
-        this.loads = loads != null ? List.copyOf(loads) : List.of();
+        // Create defensive copy (loads is already validated as non-null above)
+        this.loads = List.copyOf(loads);
         this.notes = notes;
+    }
+
+    /**
+     * Returns a defensive copy of the loads list to prevent external modification.
+     *
+     * @return unmodifiable copy of the loads list
+     */
+    public List<LoadCommand> getLoads() {
+        return Collections.unmodifiableList(loads);
     }
 
     /**
@@ -38,8 +52,10 @@ public final class CreatePickingListCommand {
      */
     @Getter
     @Builder
+    @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "Defensive copies are created in constructor and getter returns defensive copy")
     public static final class LoadCommand {
         private final String loadNumber;
+        @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "Defensive copies are created in constructor")
         private final List<OrderCommand> orders;
 
         public LoadCommand(String loadNumber, List<OrderCommand> orders) {
@@ -50,7 +66,17 @@ public final class CreatePickingListCommand {
                 throw new IllegalArgumentException("At least one order is required");
             }
             this.loadNumber = loadNumber;
-            this.orders = orders != null ? List.copyOf(orders) : List.of();
+            // Create defensive copy (orders is already validated as non-null above)
+            this.orders = List.copyOf(orders);
+        }
+
+        /**
+         * Returns a defensive copy of the orders list to prevent external modification.
+         *
+         * @return unmodifiable copy of the orders list
+         */
+        public List<OrderCommand> getOrders() {
+            return Collections.unmodifiableList(orders);
         }
     }
 
@@ -61,11 +87,13 @@ public final class CreatePickingListCommand {
      */
     @Getter
     @Builder
+    @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "Defensive copies are created in constructor and getter returns defensive copy")
     public static final class OrderCommand {
         private final String orderNumber;
         private final String customerCode;
         private final String customerName;
         private final String priority;
+        @SuppressFBWarnings(value = "EI_EXPOSE_REP2", justification = "Defensive copies are created in constructor")
         private final List<OrderLineItemCommand> lineItems;
 
         public OrderCommand(String orderNumber, String customerCode, String customerName, String priority, List<OrderLineItemCommand> lineItems) {
@@ -82,7 +110,17 @@ public final class CreatePickingListCommand {
             this.customerCode = customerCode;
             this.customerName = customerName;
             this.priority = priority;
-            this.lineItems = lineItems != null ? List.copyOf(lineItems) : List.of();
+            // Create defensive copy (lineItems is already validated as non-null above)
+            this.lineItems = List.copyOf(lineItems);
+        }
+
+        /**
+         * Returns a defensive copy of the line items list to prevent external modification.
+         *
+         * @return unmodifiable copy of the line items list
+         */
+        public List<OrderLineItemCommand> getLineItems() {
+            return Collections.unmodifiableList(lineItems);
         }
     }
 
